# Intention

./: .gitignore  README.md  Taskfile.yml
py/: main.py  pyproject.toml
py/config/: log.py
py/custom/: cloud.py  controllers.py  structer.py  volunteers.py
py/routes/: __init__.py  ingestion.py
py/services/: docx.py  ingestion.py  pdf.py
py/types/: controllers.py  structer.py
ts/: components.json  package.json
ts/app/: globals.css  layout.tsx  page.tsx
ts/app/dashboard/: layout.tsx  page.tsx
ts/app/setup/: form.tsx  page.tsx
ts/components/: file-upload.tsx  file-zone.tsx
ts/components/ui/: Silk.tsx
ts/lib/: routes.ts
