[project]
name = "py"
version = "0.1.0"
description = "Asynchronous API provider for Intention"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "google-cloud-documentai>=3.14.0",
    "gunicorn>=25.3.0",
    "langchain>=1.2.15",
    "langchain-gemini>=0.1.1",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.44.0",
]
